--- a/index.html
+++ b/index.html
@@ -5,9 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Pawtner</title>
 
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark corolbg fixed-top p-md-3">
+    <div class="container-fluid py-0">
+        <a href="index.html" class="text-white" >Pet Pawtner</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-lg-0">
+                <li class="nav-item">
+                    <a href="index.html"
+                        class="nav-link d-inline-block text-white"
+                        aria-current="page">HOME</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="about.html"
+                        class="nav-link d-inline-block text-white">ABOUT</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="Contact us.html"
+                        class="nav-link d-inline-block text-white">MEET PETS</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Contact us.html"
+                        class="nav-link d-inline-block text-white">CONTACT US</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Contact us.html"
+                        class="nav-link d-inline-block text-white">DONATION</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
