--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark corolbg fixed-top p-md-3">
+  <nav class="navbar navbar-expand-lg navbar-dark corolbg p-md-3">
     <div class="container-fluid py-0">
         <a href="index.html" class="text-white" >Pet Pawtner</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,25 +56,19 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/d1.jpeg" class="d-block w-100" alt="...">
+          <div class="carousel-item active bg" style="background-image: url('/img/d1.jpg');">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Tagline</h5>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/d2.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+          <div class="carousel-item bg" style="background-image: url('/img/d2.jpg');">
+            <div class="carousel-caption d-none d-md-block bg1" >
+              <h5>tagline</h5>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/d3.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+          <div class="carousel-item bg" style="background-image: url('/img/d3.jpg');">
+            <div class="carousel-caption d-none d-md-block bg2">
+              <h5>tagline</h5>
             </div>
           </div>
         </div>
@@ -89,6 +83,46 @@
       </div>
 </header>
 
+<!-- <header id="home">   ridhima carousel
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+          <div class="carousel-item bg" style="background-image: url('/img/d2.jpg');">
+          </div>
+          <div class="carousel-item bg active" style="background-image: url('/img/d3.jpg');">
+              <div class="container bg1 position-absolute top-50 start-50">
+                  <h1 class="text-dark font1 fw-bold">Shop For <br> The Art You'll Love</h1>
+                  <a href="home" asp-action="Shopbymedium"
+                      class="btn btn1 shadow-none all-buttons border-0 btn-dark position-relative mx-2 px-5 font2 ">Shop
+                      Now</a>
+              </div>
+          </div>
+          <div class="carousel-item bg" style="background-image: url('/img/d1.jpg');">
+              <div class="container bg2  position-absolute top-50 start-50">
+                  <h1 class="text-dark font1 fw-bold">Create & Upload</h1>
+                  <a  href="Home" asp-action="UploadArtwork"
+                      class="btn btn1 shadow-none all-buttons border-0 btn-dark  position-relative px-5 mx-2  font2 ">Upload
+                      Now</a>
+              </div>
+          </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+</header> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
