--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
   </div>
 </header> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<section class="abt p-3 mb-2 bg-black text-white text-center">
+    <h1 class="abt-header">About Us</h1>
+      <div class="info m-5">
+        <p>Our mission is to provide a platform that helps animal and animal lovers to find their forever home. We strive to make a difference in the lives of these innocent creatures by offering options to Adopt, Donate. Together, we can create a better world for all animals.</p>
+      </div>
+</section>  
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
