About us Changes

--- a/index.html
+++ b/index.html
@@ -129,6 +129,52 @@
       <div class="info m-5">
         <p>Our mission is to provide a platform that helps animal and animal lovers to find their forever home. We strive to make a difference in the lives of these innocent creatures by offering options to Adopt, Donate. Together, we can create a better world for all animals.</p>
       </div>
+      <div class="container text-center d-flex justify-content-evenly">
+        <div class="row">
+          <div class="col">
+            <div class="flip-card mx-5">
+              <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                      <p class="title">FLIP CARD</p>
+                      <p>Hover Me</p>
+                  </div>
+                  <div class="flip-card-back">
+                      <p class="title">BACK</p>
+                      <p>Leave Me</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="col">
+            <div class="flip-card mx-5">
+              <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                      <p class="title">FLIP CARD</p>
+                      <p>Hover Me</p>
+                  </div>
+                  <div class="flip-card-back">
+                      <p class="title">BACK</p>
+                      <p>Leave Me</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="col">
+            <div class="flip-card mx-5">
+              <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                      <p class="title">FLIP CARD</p>
+                      <p>Hover Me</p>
+                  </div>
+                  <div class="flip-card-back">
+                      <p class="title">BACK</p>
+                      <p>Leave Me</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+        </div>
+      </div>
 </section>  
 
 
