--- a/index.html
+++ b/index.html
@@ -135,12 +135,15 @@
             <div class="flip-card mx-5">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <p class="title">FLIP CARD</p>
-                      <p>Hover Me</p>
+                      <p class="title">What We Do:</p>
                   </div>
                   <div class="flip-card-back">
-                      <p class="title">BACK</p>
-                      <p>Leave Me</p>
+                      <ul class="text-start">
+                        <li>Rescue</li>
+                        <li>Rehabilitation</li>
+                        <li>Adoption Services</li>
+                        <li>Education</li>   
+                      </ul>
                   </div>
               </div>
           </div>
@@ -149,12 +152,14 @@
             <div class="flip-card mx-5">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <p class="title">FLIP CARD</p>
-                      <p>Hover Me</p>
+                      <p class="title">Why Choose Us:</p>
                   </div>
                   <div class="flip-card-back">
-                      <p class="title">BACK</p>
-                      <p>Leave Me</p>
+                      <ul class="text-start">
+                        <li>Compassionate Care</li>
+                        <li>Thorough Screening</li>
+                        <li>Ongoing Support</li>
+                      </ul>
                   </div>
               </div>
           </div>
@@ -163,12 +168,15 @@
             <div class="flip-card mx-5">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <p class="title">FLIP CARD</p>
-                      <p>Hover Me</p>
+                      <p class="title">How You Can Help:</p>
                   </div>
                   <div class="flip-card-back">
-                      <p class="title">BACK</p>
-                      <p>Leave Me</p>
+                      <ul class="text-start">
+                        <li>Adopt</li>
+                        <li>Volunteer</li>
+                        <li>Donate</li>
+                        <li>Foster</li>
+                      </ul>
                   </div>
               </div>
           </div>
