--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark corolbg p-md-3">
+  <nav class="navbar navbar-expand-lg bg-dbrown p-md-3">
     <div class="container-fluid py-0">
         <a href="index.html" class="text-white" >Pet Pawtner</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -127,7 +127,8 @@
 <section class="abt p-3 mb-2 bg-black text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
-        <p>Our mission is to provide a platform that helps animal and animal lovers to find their forever home. We strive to make a difference in the lives of these innocent creatures by offering options to Adopt, Donate. Together, we can create a better world for all animals.</p>
+        <h3>Welcome to <span class="text-dbrown fw-bold">PetPawtner</span></h3>
+        <p>At PetPawtner, our mission is to connect loving families with their perfect furry companions. We believe that every pet deserves a safe, happy, and loving home. Our team is dedicated to rescuing animals in need, providing them with the care and support they require, and matching them with their forever families.</p>
       </div>
       <div class="container text-center d-flex justify-content-evenly">
         <div class="row">
