--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Navbar -->
+
   <nav class="navbar navbar-expand-lg bg-dbrown p-md-3">
     <div class="container-fluid py-0">
         <a href="index.html" class="text-white" >Pet Pawtner</a>
@@ -48,6 +51,8 @@
     </div>
 </nav>
     
+<!-- Carousel -->
+
 <header>
     <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -83,48 +88,10 @@
       </div>
 </header>
 
-<!-- <header id="home">   ridhima carousel
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-          <div class="carousel-item bg" style="background-image: url('/img/d2.jpg');">
-          </div>
-          <div class="carousel-item bg active" style="background-image: url('/img/d3.jpg');">
-              <div class="container bg1 position-absolute top-50 start-50">
-                  <h1 class="text-dark font1 fw-bold">Shop For <br> The Art You'll Love</h1>
-                  <a href="home" asp-action="Shopbymedium"
-                      class="btn btn1 shadow-none all-buttons border-0 btn-dark position-relative mx-2 px-5 font2 ">Shop
-                      Now</a>
-              </div>
-          </div>
-          <div class="carousel-item bg" style="background-image: url('/img/d1.jpg');">
-              <div class="container bg2  position-absolute top-50 start-50">
-                  <h1 class="text-dark font1 fw-bold">Create & Upload</h1>
-                  <a  href="Home" asp-action="UploadArtwork"
-                      class="btn btn1 shadow-none all-buttons border-0 btn-dark  position-relative px-5 mx-2  font2 ">Upload
-                      Now</a>
-              </div>
-          </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev">
-          <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next">
-          <span class="visually-hidden">Next</span>
-      </button>
-  </div>
-</header> -->
 
-<section class="abt p-3 mb-2 bg-black text-white text-center">
+<!-- About Us -->
+
+<section class="abt p-3 bg-black text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
         <h3>Welcome to <span class="text-dbrown fw-bold">PetPawtner</span></h3>
@@ -186,6 +153,27 @@
       </div>
 </section>  
 
+<!-- About Pets -->
+
+<section class="mpets abt p-3 text-white text-center dbrownbg">
+  <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
+  <div class="d-flex flex-row mb-3">
+    <div class="book">
+      <p>Hello</p>
+      <div class="cover">
+        <p>Hover Me</p>
+      </div>
+    </div>
+  </div>
+  <div class="book">
+    <p>Hello</p>
+    <div class="cover">
+      <p>Hover Me</p>
+    </div>
+  </div>
+
+
+</section>    
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
