--- a/index.html
+++ b/index.html
@@ -154,10 +154,46 @@
 </section>  
 
 <!-- About Pets -->
-
-<section class="mpets abt p-3 text-white text-center dbrownbg">
+ <section class="mpets abt p-3 text-white text-center dbrownbg">
   <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
-  <div class="d-flex flex-row mb-3">
+  <div>
+    <div class="container text-center ms-3">
+      <div class="row">
+        <div class="fpet col">
+          <div class="book">
+            <p>Hello</p>
+          <div class="cover">
+            <p>Hover Me</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="book">
+          <p>Hello</p>
+          <div class="cover">
+            <p>Hover Me</p>
+          </div>
+         </div>
+      </div>
+      <div class="col">
+        <div class="book">
+          <p>Hello</p>
+          <div class="cover">
+          <p>Hover Me</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+ </section>
+
+<!-- About Pets Faulty-->
+
+<!-- <section class="mpets abt p-3 text-white text-center dbrownbg">
+  <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
+  <div class="pcard d-flex flex-row mb-3">
     <div class="book">
       <p>Hello</p>
       <div class="cover">
@@ -171,9 +207,9 @@
       <p>Hover Me</p>
     </div>
   </div>
+</section>     -->
 
 
-</section>    
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
