--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
 
   <!-- Navbar -->
-
-  <nav class="navbar navbar-expand-lg bg-dbrown p-md-3">
+  <nav class="navbar  navbar-expand-lg bg-dbrown p-md-3">
     <div class="container-fluid py-0">
-        <a href="index.html" class="text-white" >Pet Pawtner</a>
+        <a href="index.html" class="text-white fw-bold" >Pet Pawtner</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +51,6 @@
 </nav>
     
 <!-- Carousel -->
-
 <header>
     <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -90,7 +88,6 @@
 
 
 <!-- About Us -->
-
 <section class="abt p-3 bg-black text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
@@ -208,8 +205,6 @@
     </div>
   </div>
 </section>     -->
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
