Pet images and about pets

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="book">
             <p>Hello</p>
           <div class="cover">
-            <p>Hover Me</p>
+            <img src="img/catimg1.jpg" alt="Cat1">
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
         <div class="book">
           <p>Hello</p>
           <div class="cover">
-            <p>Hover Me</p>
+            <img src="img/dogimg1.jpg" alt="Dog1">
           </div>
          </div>
       </div>
@@ -176,7 +176,7 @@
         <div class="book">
           <p>Hello</p>
           <div class="cover">
-          <p>Hover Me</p>
+          <img src="img/dogimg2.jpg" alt="Dog2">
           </div>
           </div>
         </div>
