--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@
       <div class="row">
         <div class="fpet col">
           <div class="book">
-            <p>Hello</p>
+            <ul class="text-start">
+              <li>Billu</li>
+              <li>Friendly and Lovable</li>
+              <li>Location: </li>
+            </ul>
           <div class="cover">
             <img src="img/catimg1.jpg" alt="Cat1">
           </div>
@@ -166,7 +170,11 @@
       </div>
       <div class="col">
         <div class="book">
-          <p>Hello</p>
+          <ul class="text-start">
+            <li>Sheru</li>
+            <li>4 Months</li>
+            <li>Location: </li>
+          </ul>
           <div class="cover">
             <img src="img/dogimg1.jpg" alt="Dog1">
           </div>
@@ -174,7 +182,12 @@
       </div>
       <div class="col">
         <div class="book">
-          <p>Hello</p>
+          <ul type="none" class="text-start">
+            <li>Kaalu</li>
+            <li>1 year old</li>
+            <li>Friendly</li>
+            <li>Location: </li>
+          </ul>
           <div class="cover">
           <img src="img/dogimg2.jpg" alt="Dog2">
           </div>
@@ -184,27 +197,6 @@
     </div>
   </div>
   </section>
- </section>
-
-<!-- About Pets Faulty-->
-
-<!-- <section class="mpets abt p-3 text-white text-center dbrownbg">
-  <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
-  <div class="pcard d-flex flex-row mb-3">
-    <div class="book">
-      <p>Hello</p>
-      <div class="cover">
-        <p>Hover Me</p>
-      </div>
-    </div>
-  </div>
-  <div class="book">
-    <p>Hello</p>
-    <div class="cover">
-      <p>Hover Me</p>
-    </div>
-  </div>
-</section>     -->
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
