--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
       <div class="row">
         <div class="fpet col">
           <div class="book">
-            <ul class="text-start">
+            <ul class="fw-bold text-start">
               <li>Billu</li>
               <li>Friendly and Lovable</li>
               <li>Location: </li>
             </ul>
           <div class="cover">
-            <img src="img/catimg1.jpg" alt="Cat1">
+            <img class="rounded-pill py-3" src="img/catimg1.jpg" alt="Cat1">
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@
             <li>Location: </li>
           </ul>
           <div class="cover">
-            <img src="img/dogimg1.jpg" alt="Dog1">
+            <img class="py-3 mx-3 rounded-pill" src="img/dogimg1.jpg" alt="Dog1">
           </div>
          </div>
       </div>
@@ -189,7 +189,7 @@
             <li>Location: </li>
           </ul>
           <div class="cover">
-          <img src="img/dogimg2.jpg" alt="Dog2">
+          <img class="py-3 rounded-pill" src="img/dogimg2.jpg" alt="Dog2">
           </div>
           </div>
         </div>
