--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 <!-- About Us -->
-<section class="abt p-3 bg-black text-white text-center">
+<section class="abt p-3 py-5 bg-black text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
         <h3>Welcome to <span class="text-dbrown fw-bold">PetPawtner</span></h3>
@@ -158,9 +158,9 @@
       <div class="row">
         <div class="fpet col">
           <div class="book">
-            <ul class="fw-bold text-start">
+            <ul class="fw-bold text-white text-start">
               <li>Billu</li>
-              <li>Friendly and Lovable</li>
+              <li>Friendly</li>
               <li>Location: </li>
             </ul>
           <div class="cover">
@@ -170,7 +170,7 @@
       </div>
       <div class="col">
         <div class="book">
-          <ul class="text-start">
+          <ul class="text-start fw-bold text-white">
             <li>Sheru</li>
             <li>4 Months</li>
             <li>Location: </li>
@@ -182,7 +182,7 @@
       </div>
       <div class="col">
         <div class="book">
-          <ul type="none" class="text-start">
+          <ul class="text-start fw-bold text-white">
             <li>Kaalu</li>
             <li>1 year old</li>
             <li>Friendly</li>
