--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </section>  
 
 <!-- About Pets -->
- <section class="mpets abt p-3 text-white text-center dbrownbg">
+<section class="mpets abt p-3 text-white text-center dbrownbg">
   <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
   <div>
     <div class="container text-center ms-3">
@@ -199,8 +199,53 @@
   <div class="mbutton d-flex justify-content-end p-5">
     <button id="mbutton" type="button" class="btn bg-dark btn-outline-light">View More >>></button>
   </div>
-  </section>
+</section>
 
+<!-- Contact Us -->
+<section>
+  <div class="form-card1">
+    <div class="form-card2">
+      <form class="form">
+        <p class="form-heading">Get In Touch</p>
+  
+        <div class="form-field">
+          <input required="" placeholder="Name" class="input-field" type="text" />
+        </div>
+  
+        <div class="form-field">
+          <input
+            required=""
+            placeholder="Email"
+            class="input-field"
+            type="email"
+          />
+        </div>
+  
+        <div class="form-field">
+          <input
+            required=""
+            placeholder="Subject"
+            class="input-field"
+            type="text"
+          />
+        </div>
+  
+        <div class="form-field">
+          <textarea
+            required=""
+            placeholder="Message"
+            cols="30"
+            rows="3"
+            class="input-field"
+          ></textarea>
+        </div>
+  
+        <button class="sendMessage-btn">Send Message</button>
+      </form>
+    </div>
+  </div>
+  
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
