--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <section class="abt p-3 py-5 bg-black text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
-        <h3>Welcome to <span class="text-dbrown fw-bold">PetPawtner</span></h3>
+        <h3>Welcome to <span class="fw-bold">PetPawtner</span></h3>
         <p>At PetPawtner, our mission is to connect loving families with their perfect furry companions. We believe that every pet deserves a safe, happy, and loving home. Our team is dedicated to rescuing animals in need, providing them with the care and support they require, and matching them with their forever families.</p>
       </div>
       <div class="container text-center d-flex justify-content-evenly">
@@ -202,9 +202,9 @@
 </section>
 
 <!-- Contact Us -->
-<section>
+<section class="contact">
   <div class="form-card1">
-    <div class="form-card2">
+    <div class="form-card2 d-flex justify-content-center p-5">
       <form class="form">
         <p class="form-heading">Get In Touch</p>
   
