--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 <!-- About Us -->
-<section class="abt p-3 py-5 bg-black text-white text-center">
+<section class="abt p-3 py-5 bg-dark text-white text-center">
     <h1 class="abt-header">About Us</h1>
       <div class="info m-5">
         <h3>Welcome to <span class="fw-bold">PetPawtner</span></h3>
@@ -151,7 +151,7 @@
 </section>  
 
 <!-- About Pets -->
-<section class="mpets abt p-3 text-white text-center dbrownbg">
+<section class="mpets  abt p-3 text-white text-center dbrownbg">
   <h1 class="atp-header  lbrownbg d-inline-block my-4 mb-5 py-3 px-5">Meet The Pets</h1>
   <div>
     <div class="container text-center ms-3">
@@ -202,11 +202,12 @@
 </section>
 
 <!-- Contact Us -->
-<section class="contact">
+<section class="contact bg-dark">
+  <h1 class="text-center text-white fw-bold p-5">Contact Us</h1>
   <div class="form-card1">
-    <div class="form-card2 d-flex justify-content-center p-5">
+    <div class="form-card2 d-flex justify-content-center p-2 pb-5">
       <form class="form">
-        <p class="form-heading">Get In Touch</p>
+        <p class="form-heading fs-3">Get In Touch</p>
   
         <div class="form-field">
           <input required="" placeholder="Name" class="input-field" type="text" />
@@ -240,7 +241,7 @@
           ></textarea>
         </div>
   
-        <button class="sendMessage-btn">Send Message</button>
+        <button class="sendMessage-btn text-white">Send Message</button>
       </form>
     </div>
   </div>
